bundled_metadata/force-app/main/default/objects/Account/fields/Account_Unified_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Unified_Id__c</fullName>
    <description>Internal unique identifier to unify across systems</description>
    <externalId>true</externalId>
    <label>Account Unified Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>