bundled_metadata/force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the wholesaler or payer record is active. If false the entity is inactive with Pepsico.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>