bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Annual_Sales_Range__c.field-meta.xml
<CustomField>
    <fullName>AFH_Annual_Sales_Range__c</fullName>
    <label>Annual Sales Range</label>
    <length>70</length>
    <type>Text</type>
</CustomField>