bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Business_Type__c</fullName>
    <description>This field is used to assign business type.</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-site independent</fullName>
            </value>
            <value>
                <fullName>Multi-site independent</fullName>
            </value>
            <value>
                <fullName>Franchisee</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>