bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Channel__c.field-meta.xml
<CustomField>
    <fullName>AFH_Channel__c</fullName>
    <description>Stores the customer’s sub‑channel.</description>
    <label>Sub Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family pub</fullName>
            </value>
            <value>
                <fullName>Gastro pub</fullName>
            </value>
            <value>
                <fullName>Stadia</fullName>
            </value>
            <value>
                <fullName>Sports clubs</fullName>
            </value>
            <value>
                <fullName>Visitor attractions</fullName>
            </value>
            <value>
                <fullName>Entertainment venue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dry led</fullName>
                <isActive>false</isActive>
                <label>Dry led</label>
            </value>
            <value>
                <fullName>Wet led</fullName>
                <isActive>false</isActive>
                <label>Wet led</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>