bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Channel_Type__c</fullName>
    <description>Stores the type of channel through which the customer interacts</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Channel</valueSetName>
    </valueSet>
</CustomField>