bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>AFH_Confidence_Level__c</fullName>
    <label>Confidence Level</label>
    <length>70</length>
    <type>Text</type>
</CustomField>