bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Cuisine__c.field-meta.xml
<CustomField>
    <fullName>AFH_Cuisine__c</fullName>
    <label>Cuisine</label>
    <length>70</length>
    <type>Text</type>
</CustomField>