bundled_metadata/force-app/main/default/objects/Account/fields/AFH_DSId__c.field-meta.xml
<CustomField>
    <fullName>AFH_DSId__c</fullName>
    <description>Stores the unique identifier for the account provided by the Data Essentials (DS) API.</description>
    <label>DSId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>