bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Email__c.field-meta.xml
<CustomField>
    <fullName>AFH_Email__c</fullName>
    <description>Stores the email address of the customer.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>