bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Email_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>AFH_Email_Engagement_Score__c</fullName>
    <description>Stores the engagement score of the account based on email interactions.</description>
    <label>Email Engagement Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>