bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>AFH_Employee_Range__c</fullName>
    <label>Employee Range</label>
    <length>70</length>
    <type>Text</type>
</CustomField>