bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Geolocation_Codes__c.field-meta.xml
<CustomField>
    <fullName>AFH_Geolocation_Codes__c</fullName>
    <description>Stores the formatted geolocation code generated from the account.</description>
    <formula>&quot;Latitude: &quot; &amp; TEXT(ShippingLatitude) &amp; 
&quot; , Longitude: &quot; &amp; TEXT(ShippingLongitude)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geolocation Codes</label>
    <type>Text</type>
</CustomField>