bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Is_AdvertisementConfirmed__c.field-meta.xml
<CustomField>
    <fullName>AFH_Is_AdvertisementConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the customer was reached via online advertisement.</description>
    <label>Online Advertisement</label>
    <type>Checkbox</type>
</CustomField>