bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Is_MarketingConfirmed__c.field-meta.xml
<CustomField>
    <fullName>AFH_Is_MarketingConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the marketing team has confirmed the customer’s details or engagement.</description>
    <label>Marketing Confirmed</label>
    <type>Checkbox</type>
</CustomField>