bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Is_PrivacyConfirmed__c.field-meta.xml
<CustomField>
    <fullName>AFH_Is_PrivacyConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the customer has agreed to privacy policies or data usage.</description>
    <label>Privacy Confirmed</label>
    <type>Checkbox</type>
</CustomField>