bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Is_PrivacyConfirmed_date__c.field-meta.xml
<CustomField>
    <fullName>AFH_Is_PrivacyConfirmed_date__c</fullName>
    <description>Stores the date when the customer confirmed or agreed to the privacy policy.</description>
    <label>Is Privacy Confirmed date</label>
    <type>Date</type>
</CustomField>