bundled_metadata/force-app/main/default/objects/Account/fields/AFH_IsApprovedDLMember__c.field-meta.xml
<CustomField>
    <fullName>AFH_IsApprovedDLMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApprovedDLMember</label>
    <type>Checkbox</type>
</CustomField>