bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>AFH_Job_Role__c</fullName>
    <description>Stores the role of the contact or account representative.</description>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Team member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>