bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>AFH_Lead_Score__c</fullName>
    <description>Stores the total lead score for the account.</description>
    <formula>AFH_Email_Engagement_Score__c   + AFH_Website_Scoring__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>