bundled_metadata/force-app/main/default/objects/Account/fields/AFH_No_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>AFH_No_of_Cases__c</fullName>
    <description>Stores the number of product cases the customer purchased in the last year.</description>
    <label>No. of Cases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-30</fullName>
            </value>
            <value>
                <fullName>30-80</fullName>
            </value>
            <value>
                <fullName>80-100</fullName>
            </value>
            <value>
                <fullName>100-200</fullName>
            </value>
            <value>
                <fullName>200+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>