bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Number_of_Site__c.field-meta.xml
<CustomField>
    <fullName>AFH_Number_of_Site__c</fullName>
    <description>Stores the total number of operational sites/locations for the business.</description>
    <label>Number of Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>