bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Operator_Status__c.field-meta.xml
<CustomField>
    <fullName>AFH_Operator_Status__c</fullName>
    <label>Operator Status</label>
    <length>70</length>
    <type>Text</type>
</CustomField>