bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Other_Channel__c.field-meta.xml
<CustomField>
    <fullName>AFH_Other_Channel__c</fullName>
    <description>Stores additional channel details when the customer interacts through a channel not listed.</description>
    <label>Other Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>