bundled_metadata/force-app/main/default/objects/Account/fields/AFH_PepsiCo_Products_Stocked__c.field-meta.xml
<CustomField>
    <fullName>AFH_PepsiCo_Products_Stocked__c</fullName>
    <description>Stores which PepsiCo products the business currently stocks. Multiple options can be selected.</description>
    <label>PepsiCo Products Stocked</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I don&apos;t currently stock PepsiCo</fullName>
            </value>
            <value>
                <fullName>Walkers</fullName>
            </value>
            <value>
                <fullName>Doritos</fullName>
            </value>
            <value>
                <fullName>Pipers</fullName>
            </value>
           
            <value>
                <fullName>Quaker</fullName>
                <isActive>true</isActive>
                <label>Quaker</label>
            </value>
            <value>
                <fullName>Scotts</fullName>
            </value>
            <value>
                <fullName>Snack A Jacks</fullName>
            </value>
            <value>
                <fullName>Smiths</fullName>
            </value>
            <value>
                <fullName>Nobby&apos;s Nuts</fullName>
            </value>
            <value>
                <fullName>That&apos;s Nuts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>