bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Popularity_Score__c.field-meta.xml
<CustomField>
    <fullName>AFH_Popularity_Score__c</fullName>
    <label>Popularity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>