bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>AFH_Product_Interest__c</fullName>
    <description>Stores the PepsiCo products that the customer is interested in. Multiple options can be selected.</description>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Brand</valueSetName>
    </valueSet>
</CustomField>