bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Segment__c.field-meta.xml
<CustomField>
    <fullName>AFH_Segment__c</fullName>
    <label>Segment</label>
    <length>70</length>
    <type>Text</type>
</CustomField>