bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Source_of_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>AFH_Source_of_Inquiry__c</fullName>
    <label>Source of Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Source_of_Inquiry</valueSetName>
    </valueSet>
</CustomField>