bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Source_of_Inquiry_Other_Val__c.field-meta.xml
<CustomField>
    <fullName>AFH_Source_of_Inquiry_Other_Val__c</fullName>
    <label>Source of Inquiry Other Val</label>
    <length>100</length>
    <type>Text</type>
</CustomField>