bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Website_Scoring__c.field-meta.xml
<CustomField>
    <fullName>AFH_Website_Scoring__c</fullName>
    <description>Stores the total website engagement score for the account, calculated automatically by summarizing related activity or scoring records.</description>
    <label>Website Scoring</label>
    <summarizedField>AFH_ScoringMatrix__c.AFH_Score_Count__c</summarizedField>
    <summaryForeignKey>AFH_ScoringMatrix__c.AFH_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>