bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Wholesaler_Preference__c.field-meta.xml
<CustomField>
    <fullName>AFH_Wholesaler_Preference__c</fullName>
    <description>Stores the preferred wholesaler for the business.</description>
    <label>Wholesaler Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booker</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Bidfood</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>