bundled_metadata/force-app/main/default/objects/Account/fields/AFH_Wholesaler_Preference_Other__c.field-meta.xml
<CustomField>
    <fullName>AFH_Wholesaler_Preference_Other__c</fullName>
    <description>Stores the name of the preferred wholesaler.</description>
    <label>Wholesaler Preference Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>