bundled_metadata/force-app/main/default/objects/Account/fields/All_MSL_Missing__c.field-meta.xml
<CustomField>
    <fullName>All_MSL_Missing__c</fullName>
    <description>Checkbox to display when all MSL products are missing</description>
    <defaultValue>false</defaultValue>
    <label>All MSL Missing</label>
    <type>Checkbox</type>
</CustomField>