bundled_metadata/force-app/main/default/objects/Account/fields/ALL_MSL_Missing_Date__c.field-meta.xml
<CustomField>
    <fullName>ALL_MSL_Missing_Date__c</fullName>
    <description>Store the date since when all MSL products are missing</description>
    <label>ALL MSL Missing Date</label>
    <type>Date</type>
</CustomField>