bundled_metadata/force-app/main/default/objects/Account/fields/Annual_Sales_Beverages__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Beverages__c</fullName>
    <description>Annual sales reported for a prospect in the beverages category </description>
    <label>Annual Sales Beverages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>