bundled_metadata/force-app/main/default/objects/Account/fields/Annual_Volume_Food__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume_Food__c</fullName>
    <description>Volume reported for a prospect in the foods category </description>
    <label>Annual Volume Food</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>