bundled_metadata/force-app/main/default/objects/Account/fields/B2B_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_Status__c</fullName>
    <description>TBD</description>
    <label>B2B Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>At-Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>