bundled_metadata/force-app/main/default/objects/Account/fields/Buying_Categories__c.field-meta.xml
<CustomField>
    <fullName>Buying_Categories__c</fullName>
    <description>Type of competitor product category the lead has a contract for</description>
    <label>Buying Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>