bundled_metadata/force-app/main/default/objects/Account/fields/Centralization_Degree__c.field-meta.xml
<CustomField>
    <fullName>Centralization_Degree__c</fullName>
    <label>PS - Degree of Centralization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>