bundled_metadata/force-app/main/default/objects/Account/fields/Competitor_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Annual_Sales__c</fullName>
    <description>Estimated annual sales value of competitor products at the store</description>
    <label>Competitor Annual Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>