bundled_metadata/force-app/main/default/objects/Account/fields/Competitor_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Contract_Expiration_Date__c</fullName>
    <description>Date the competitor’s contract expires</description>
    <label>Competitor Contract Expiration Date</label>
    <type>Date</type>
</CustomField>