bundled_metadata/force-app/main/default/objects/Account/fields/Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance__c</fullName>
    <description>Current outstanding balance on the Payer&apos;s account</description>
    <label>Credit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>