bundled_metadata/force-app/main/default/objects/Account/fields/CUST_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_ID__c</fullName>
    <description>Unique external identifier used to link the Customer with external systems</description>
    <externalId>true</externalId>
    <label>Account External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>