bundled_metadata/force-app/main/default/objects/Account/fields/Cust_ID_System_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID_System_of_Record__c</fullName>
    <label>Cust ID System of Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>