bundled_metadata/force-app/main/default/objects/Account/fields/Cust_L3_bevs__c.field-meta.xml
<CustomField>
    <fullName>Cust_L3_bevs__c</fullName>
    <label>L3 Beverages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>