bundled_metadata/force-app/main/default/objects/Account/fields/Cust_Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>Cust_Tax_Class__c</fullName>
    <description>Customer&apos;s tax classification</description>
    <label>Customer Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>