bundled_metadata/force-app/main/default/objects/Account/fields/Deactivate_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Date__c</fullName>
    <description>Date on which account was deactivated</description>
    <label>Deactivate Date</label>
    <type>Date</type>
</CustomField>