bundled_metadata/force-app/main/default/objects/Account/fields/Delivery_Day__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Day__c</fullName>
    <label>Delivery Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>