bundled_metadata/force-app/main/default/objects/Account/fields/Delivery_Window_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window_End_Time__c</fullName>
    <description>End time of the store’s delivery window</description>
    <label>Delivery Window End Time</label>
    <type>Time</type>
</CustomField>