bundled_metadata/force-app/main/default/objects/Account/fields/Digital_Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Digital_Platform_Type__c</fullName>
    <description>TBD</description>
    <label>Digital Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEDO</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>