bundled_metadata/force-app/main/default/objects/Account/fields/Disqual_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqual_Reason__c</fullName>
    <description>Reason why the lead was disqualified</description>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store Closed</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Competitor Exclusive Agreement</fullName>
            </value>
            <value>
                <fullName>Location Not Suitable</fullName>
            </value>
            <value>
                <fullName>Legal / Compliance Restriction</fullName>
            </value>
            <value>
                <fullName>Already Serviced by Another Channel</fullName>
            </value>
            <value>
                <fullName>Financial / Credit Issues</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead / Already Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>