bundled_metadata/force-app/main/default/objects/Account/fields/ERP_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Name__c</fullName>
    <description>Wholesaler&apos;s name in ERP system</description>
    <label>ERP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>