bundled_metadata/force-app/main/default/objects/Account/fields/ERP_Store_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Store_ID__c</fullName>
    <description>Wholesaler&apos;s Store ID in ERP system</description>
    <label>ERP Store ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>